--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -2,35 +2,66 @@
 
 
 
-<div class="wrapper">
+    <div class="wrapper">
 
-    <Navbar/>
+        <!-- Navbar -->
+        <nav class="main-header navbar navbar-expand navbar-white navbar-light">
+            <!-- Left navbar links -->
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
+                </li>
+                <li class="nav-item d-none d-sm-inline-block">
+                    <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                        <span class="oi oi-home" aria-hidden="true"></span> Home
+                    </NavLink>
+                </li>
+         
+            </ul>
 
-    <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper">
+            <!-- SEARCH FORM -->
+            <form class="form-inline ml-3">
+                <div class="input-group input-group-sm">
+                    <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
+                    <div class="input-group-append">
+                        <button class="btn btn-navbar" type="submit">
+                            <i class="fas fa-search"></i>
+                        </button>
+                    </div>
+                </div>
+            </form> 
+        </nav>
+        <!-- /.navbar -->
 
-        @Body
+
+
+        <Navbar />
+
+        <!-- Content Wrapper. Contains page content -->
+        <div class="content-wrapper">
+
+            @Body
+
+        </div>
+        <!-- /.content-wrapper -->
+        <!-- Control Sidebar -->
+
+
+
+        <aside class="control-sidebar control-sidebar-dark">
+            <!-- Control sidebar content goes here -->
+        </aside>
+
+
+        <!-- /.control-sidebar -->
+        <!-- Main Footer -->
+        <footer class="main-footer">
+            <strong>Copyright &copy; David Silwal.</strong>
+            All rights reserved.
+            <div class="float-right d-none d-sm-inline-block">
+                <b>Version</b> 0.1
+            </div>
+        </footer>
 
     </div>
-    <!-- /.content-wrapper -->
-    <!-- Control Sidebar -->
-
-
-
-    <aside class="control-sidebar control-sidebar-dark">
-        <!-- Control sidebar content goes here -->
-    </aside>
-
-
-    <!-- /.control-sidebar -->
-    <!-- Main Footer -->
-    <footer class="main-footer">
-        <strong>Copyright &copy; David Silwal.</strong>
-        All rights reserved.
-        <div class="float-right d-none d-sm-inline-block">
-            <b>Version</b> 0.1
-        </div>
-    </footer>
-
-</div>
 <!-- ./wrapper -->
