--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -24,6 +24,8 @@
     <link rel="stylesheet" href="dist/css/adminlte.min.css">
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+
+    <link href="~/css/site.css" rel="stylesheet" />
 </head>
 <!--
 BODY TAG OPTIONS:
